Add get baremetal host swagger and generate
Co-author-by: Giri Kuncoro <girikuncoro@gmail.com>
