# pkg/api/v1/restapi/operations/bare_metal_hosts/get_bare_metal_hosts.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package bare_metal_hosts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	middleware "github.com/go-openapi/runtime/middleware"
+)
+
+// GetBareMetalHostsHandlerFunc turns a function with the right signature into a get bare metal hosts handler
+type GetBareMetalHostsHandlerFunc func(GetBareMetalHostsParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetBareMetalHostsHandlerFunc) Handle(params GetBareMetalHostsParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetBareMetalHostsHandler interface for that can handle valid get bare metal hosts params
+type GetBareMetalHostsHandler interface {
+	Handle(GetBareMetalHostsParams) middleware.Responder
+}
+
+// NewGetBareMetalHosts creates a new http.Handler for the get bare metal hosts operation
+func NewGetBareMetalHosts(ctx *middleware.Context, handler GetBareMetalHostsHandler) *GetBareMetalHosts {
+	return &GetBareMetalHosts{Context: ctx, Handler: handler}
+}
+
+/*GetBareMetalHosts swagger:route GET /bare-metal-hosts bare-metal-hosts getBareMetalHosts
+
+GetBareMetalHosts get bare metal hosts API
+
+*/
+type GetBareMetalHosts struct {
+	Context *middleware.Context
+	Handler GetBareMetalHostsHandler
+}
+
+func (o *GetBareMetalHosts) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewGetBareMetalHostsParams()
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
