# pkg/api/v1/restapi/operations/bare_metal_hosts/get_bare_metal_hosts_responses.go
@@ -1,0 +1,119 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package bare_metal_hosts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/mahakamcloud/mahakam/pkg/api/v1/models"
+)
+
+// GetBareMetalHostsOKCode is the HTTP code returned for type GetBareMetalHostsOK
+const GetBareMetalHostsOKCode int = 200
+
+/*GetBareMetalHostsOK list of available bare metal hosts
+
+swagger:response getBareMetalHostsOK
+*/
+type GetBareMetalHostsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.BareMetalHost `json:"body,omitempty"`
+}
+
+// NewGetBareMetalHostsOK creates GetBareMetalHostsOK with default headers values
+func NewGetBareMetalHostsOK() *GetBareMetalHostsOK {
+
+	return &GetBareMetalHostsOK{}
+}
+
+// WithPayload adds the payload to the get bare metal hosts o k response
+func (o *GetBareMetalHostsOK) WithPayload(payload []*models.BareMetalHost) *GetBareMetalHostsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get bare metal hosts o k response
+func (o *GetBareMetalHostsOK) SetPayload(payload []*models.BareMetalHost) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBareMetalHostsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.BareMetalHost, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*GetBareMetalHostsDefault error
+
+swagger:response getBareMetalHostsDefault
+*/
+type GetBareMetalHostsDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetBareMetalHostsDefault creates GetBareMetalHostsDefault with default headers values
+func NewGetBareMetalHostsDefault(code int) *GetBareMetalHostsDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetBareMetalHostsDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get bare metal hosts default response
+func (o *GetBareMetalHostsDefault) WithStatusCode(code int) *GetBareMetalHostsDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get bare metal hosts default response
+func (o *GetBareMetalHostsDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get bare metal hosts default response
+func (o *GetBareMetalHostsDefault) WithPayload(payload *models.Error) *GetBareMetalHostsDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get bare metal hosts default response
+func (o *GetBareMetalHostsDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBareMetalHostsDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
