# swagger/mahakam.yaml
@@ -95,6 +95,21 @@ paths:
           description: error
           schema:
             $ref: "#/definitions/error"
+    get:
+      tags:
+        - bare-metal-hosts
+      operationId: getBareMetalHosts
+      responses:
+        200:
+          description: list of available bare metal hosts
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/bareMetalHost"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
   /clusters:
     get:
       tags:
